# LibraryManager

./: CMakeLists.txt  README.md
include/: AdminSession.h  BookManager.h  GuestSession.h  SessionManager.h  book.h  common.h  manager.h  reader.h
src/: AdminSession.cpp  BookManager.cpp  GuestSession.cpp  SessionManager.cpp  book.cpp  main.cpp  manager.cpp  reader.cpp
